fix: ensure "Delete" button remains visible on narrow screens

--- a/gravitee-apim-console-webui/src/management/api/documentation-v4/components/api-documentation-v4-pages-list/api-documentation-v4-pages-list.component.scss
+++ b/gravitee-apim-console-webui/src/management/api/documentation-v4/components/api-documentation-v4-pages-list/api-documentation-v4-pages-list.component.scss
@@ -40,11 +40,7 @@
 
     &__actions {
       display: flex;
-      gap: 8px;
       flex: 1 0 auto;
-    }
-    .mat-column-actions {
-      max-width: 232px;
     }
   }
 }
